# strawberry-workshop

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  404.html  Dockerfile  README.md  cli.py  fly.toml  index.html  main.css  manage.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: docs.yaml
api/: schema.py  tracing.py  urls.py  views.py
api/authentication/: mutation.py  permissions.py
api/pagination/: types.py
api/podcasts/: dataloaders.py  mutation.py  query.py  types.py
cli/: __init__.py
db/: admin.py  apps.py  data.py  models.py  pagination.py
db/migrations/: 0001_initial.py  0002_episode_total_time.py  0002_podcast_subscribers.py
docs/: config.toml  index.html
docs/01-getting-started/: index.html
docs/01-getting-started/03-graphiql/: index.html
docs/01-getting-started/introduction/: index.html
docs/01-getting-started/setup/: index.html
docs/02-api/: index.html
docs/02-api/how-it-works/: index.html
docs/02-api/our-first-api/: index.html
docs/02-api/strawberry-overview/: index.html
docs/03-pagination/: index.html
docs/03-pagination/cursor-pagination/: index.html
docs/03-pagination/duplicated-code/: index.html
docs/03-pagination/pagination/: index.html
docs/04-dataloaders/: index.html
docs/04-dataloaders/dataloaders/: index.html
docs/04-dataloaders/info/: index.html
docs/04-dataloaders/setup/: index.html
docs/05-authentication/: index.html
docs/05-authentication/authentication/: index.html
docs/05-authentication/permissions/: index.html
docs/06-errors/: index.html
docs/06-errors/errors/: index.html
docs/07-final-touches/: index.html
docs/07-final-touches/safety/: index.html
docs/07-final-touches/tracing/: index.html
docs/content/: _index.md
docs/content/docs/01-getting-started/: 01-introduction.md  02-setup.md  03-graphiql.md  _index.md
docs/content/docs/02-api/: 01-how-it-works.md  02-strawberry-overview.md  03-our-first-api.md  _index.md
docs/content/docs/03-pagination/: 01-pagination.md  02-duplicated-code.md  03-cursor-pagination.md  _index.md
docs/content/docs/04-dataloaders/: 01-setup.md  02-info.md  03-dataloaders.md  _index.md
docs/content/docs/05-authentication/: 01-authentication.md  02-permissions.md  _index.md
docs/content/docs/06-errors/: 01-errors.md  _index.md
docs/content/docs/07-final-touches/: 01-tracing.md  02-safety.md  _index.md
docs/content/docs/api/: _index.md  how-it-works.md  our-first-api.md  strawberry-overview.md
docs/content/docs/authentication/: _index.md  authentication.md  permissions.md
docs/content/docs/dataloaders/: _index.md  dataloaders.md  info.md  setup.md
docs/content/docs/errors/: _index.md  errors.md
docs/content/docs/final-touches/: _index.md  safety.md  tracing.md
docs/content/docs/getting-started/: _index.md  graphiql.md  introduction.md  setup.md
docs/content/docs/pagination/: _index.md  cursor-pagination.md  duplicated-code.md  pagination.md
docs/themes/adidoks/sass/common/: _dark.scss
docs/themes/adidoks/templates/docs/: page.html
exercises/: exercise_01.py
podcast/: asgi.py  settings.py  urls.py  wsgi.py
tests/api/: conftest.py  test_authentication.py  test_find_podcasts.py  test_latest_episodes.py  test_podcast.py  test_podcasts_dataloader.py  test_subscribe_to_podcast.py
themes/adidoks/: CODE_OF_CONDUCT.md
themes/adidoks/content/blog/: markdown-syntax.md  math-typesetting.md
themes/adidoks/content/docs/contributing/: code-of-conduct.md
themes/adidoks/content/docs/getting-started/: quick-start.md
themes/adidoks/content/docs/help/: faq.md
themes/adidoks/sass/common/: _global.scss  _variables.scss
themes/adidoks/static/: site.webmanifest
themes/adidoks/static/js/: main.js  search.js
themes/adidoks/templates/: 404.html  index.html  page.html  section.html
themes/adidoks/templates/authors/: list.html  single.html
themes/adidoks/templates/docs/: section.html
themes/adidoks/templates/macros/: docs-sidebar.html  head.html
users/: authenticate.py  models.py
users/migrations/: 0001_initial.py
