[tool.poetry]
name = "strawberry-workshop"
version = "0.1.0"
description = ""
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
typer = "^0.4.2"
podcastparser = "^0.6.8"
rich = "^12.4.4"
Pillow = "^9.2.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-cursor-pagination = "^0.2.0"
ddtrace = "^1.2.2"
strawberry-graphql = "^0.117.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}
pdbpp = "^0.10.3"
poethepoet = "^0.15.0"
django-extensions = "^3.1.5"
Werkzeug = "2.0.3"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
indent = 4
combine_star = true
combine_as_imports = true
lines_after_imports = 2
known_django = ["django"]
known_strawberry = ["strawberry"]
known_pytest = ["pytest"]
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "STRAWBERRY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
addopts = "-s"
DJANGO_SETTINGS_MODULE = "podcast.settings"
testpaths = ["tests/"]

[tool.mypy]
plugins = ["strawberry.ext.mypy_plugin"]

[tool.poe.tasks]
test = "pytest"
server = "python manage.py runserver"
server-debug = "poetry run ddtrace-run python manage.py runserver_plus --print-sql"
migrate = "python manage.py migrate"

[tool.poe.tasks.import-data]
shell = """
python cli.py https://talkpython.fm/episodes/rss
python cli.py https://realpython.com/podcasts/rpp/feed
python cli.py https://pythonbytes.fm/episodes/rss
python cli.py https://www.pythonpodcast.com/feed/mp3/
"""
interpreter = "bash"
